--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                 aria-expanded="true"
                 aria-controls="flush-collapseOne"
               >
-                How many months will be used to learn Cyber Security?
+                How many months will be used to learn Web Development?
               </button>
             </h2>
             <div
@@ -338,7 +338,7 @@
                 aria-expanded="true"
                 aria-controls="flush-collapseOne"
               >
-                How many months will be used to learn Cyber Security?
+                How many months will be used to learn Data Analysis?
               </button>
             </h2>
             <div
