--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
           </div>
           <div class="foot-1 p-3 col-sm-12 col-md-3 col-lg-3">
             <div class="newsletter">
-              <input class="w-100" type="email" placeholder="Sign up for our newsletter" id="">
+              <input class="w-100" type="email" placeholder="Sign up for our newsletter" required>
               <button class="w-100 mt-2" type="submit">Submit</button>
             </div>
             <div class="foot_contact d-flex">
