--- a/index.html
+++ b/index.html
@@ -363,10 +363,10 @@
             </div>
           </div>
           <div class="foot-1 p-3 col-sm-12 col-md-3 col-lg-3">
-            <div class="newsletter">
+            <form class="newsletter">
               <input class="w-100" type="email" placeholder="Sign up for our newsletter" required>
               <button class="w-100 mt-2" type="submit">Submit</button>
-            </div>
+            </form>
             <div class="foot_contact d-flex">
               <i class="fa fa-phone"></i>
               <p>+234 000 000 0000</p>
